added starter file

--- a/Week_03/Layouts/layout-1.html
+++ b/Week_03/Layouts/layout-1.html
@@ -1,78 +1,73 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Layout 1 header-footer-sidebar using pixels</title>
+	<meta charset="utf-8">
+	<title>Layout 1: header, footer, main and sidebar using pixels</title>
+	<!-- Enough with the style tag! Let's link to an external style sheet that we can reuse common styles across an entire site -->
+	<link rel="stylesheet" type="text/css" href="css/layout-1.css">
 	<style type="text/css">
-		/*grouped selectors, same styles, different tags*/
-		div, header, footer, main, article, section, aside {
-			background-color: rgba(0,0,100,0.2);
+		/* transparent blue bg, and minimum height so we can keep track of our divs and semantic markup elements without having to add content. */
+		div, header, footer, section, aside, article, main{
 			min-height: 100px;
+			/* RGBA color, red, green, blue (0-255) and alpha (0-1) */
+			background-color: rgba(0,100,255,0.2)
 		}
-
-		div.wrapper {
+		div.wrapper{
 			width: 900px;
-			/* center a div within the browser using margin 0 auto*/
+			/* use margin 0 auto to center our wrapper div within the browser window */
 			margin: 0 auto;
+			/* add a little padding so we can see how child elements stack more clearly */
+			padding: 30px;
 		}
-
-		article {
+		header, footer{
+			width: 100%;
+		}
+		/* Define these after adding to html! Notice the clear issue with floating! */
+		article{
 			width: 600px;
 			float: left;
-			/* add 10px margin all around will add 20px to our width and height*/
-			margin: 10px;
-			/*600px -10px -10px = 580px*/
-			width: 580px;
-			/* adding padding will also add to our width dimensions*/
-			padding: 10px;
-			width: 560px;
+			/* option 2:  add some margins; */
+			/* 600-20-20=560px */
+			/* width: 560px;
+			margin: 0px 20px; */
 		}
-
-		aside {
+		aside{
 			width: 300px;
-			min-height: 600px;
+			/* Define a height so we can see it better */
+			min-height: 424px ;
 			float: left;
-			margin: 10px;
-			width: 280px;
-
+			/* option 2:  add some margins; */
+			/* 300-20-20=260px */
+			/* width: 260px;
+			margin: 0px 20px; */
 		}
-
-		/* when we are done floating elements we need to clear immediately after*/
-		.clear {
+		/* use this to fix the container/wrapping float issues */
+		br.clear{
 			clear: both;
 			height: 0;
 		}
-
 	</style>
 </head>
 <body>
-	<div class="wrapper">
-		<header>
-			a header element pretend im the main nav...
-		</header>
-		<main>
-			<h1>Main Content Section, heading elements display block</h1>
-			<article>
-				<h2>An article with 3 sections</h2>
-				<section>
-					<h3>Section 1</h3>
-				</section>
-				<section>
-					<h3>Section 2</h3>
-				</section>
-				<section>
-					<h3>Section 3</h3>
-				</section>
-			</article>
-			<aside>
-				<h2>Sidebar</h2>
-			</aside>
-			<!-- clear out so our wrapping div (in this case is the main tag wraps around)
-			we will discuss several clear fixes and alternatives next week! -->
-			<br class="clear">
-		</main>
-		<footer>
-			<h3>Some footer text. maybe social media links some day...</h3>
-		</footer>
-	</div>
+<!-- Header, Main, Sidebar, Footer with pixels  -->
+<div class="wrapper">
+	<header>
+		A header element with width 100%. We will cover menu layouts in another example!
+	</header>
+	<main>
+		<h1>Main Content Section- heading elements display block!</h1>
+		<article>
+			<h2>Article with 3 sections.</h2>
+			<section><h3>Section 1</h3></section>
+			<section><h3>Section 2</h3></section>
+			<section><h3>Section 3</h3></section>
+		</article>
+		<aside><h2>Sidebar</h2></aside>
+		<!-- clear out so our wrapper div wraps around. we will discuss several clearfixes this week -->
+		<br class="clear"/>
+	</main>
+	<footer><h3>Some footer text</h3></footer>
+</div>
+
 </body>
 </html>
