added fluid vs pixel based layout

--- a/Week_03/Layouts/layout-2.html
+++ b/Week_03/Layouts/layout-2.html
@@ -6,6 +6,7 @@
     <title>Full width header and footer, 3 equal columns</title>
     <!-- Enough with the style tag! Let's link to an external style sheet that we can reuse common styles across an entire site -->
     <link rel="stylesheet" type="text/css" href="css/layout-2.css">
+
 </head>
 
 <body>
@@ -41,7 +42,8 @@
         </article>
         <!-- resize your browser to see the difference between the 2 layouts -->
     <footer>
-        <h3>Some footer text</h3></footer>
+        <h3>Some footer text</h3>
+    </footer>
 </body>
 
 </html>
